--- a/src/assets/less/styles.less
+++ b/src/assets/less/styles.less
@@ -61,7 +61,10 @@ body {
 }
 
 .speechSearchView {
-  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  width: 100%;
 }
 
 a {
@@ -77,11 +80,24 @@ a {
   }
 }
 
+p {
+  margin-bottom: @gutter-sm;
+}
+
 #nav {
   padding: @gutter-sm;
   position: absolute;
   right: 0;
   top: 0;
+
+  a {
+    color: #fff;
+  }
+
+  .close-icon {
+    height: 3rem;
+    width: 3rem;
+  }
 }
 
 .btn {
@@ -97,7 +113,28 @@ a {
   text-transform: uppercase;
 
   &-start {
-    margin-bottom: @gutter-sm;
+    cursor: pointer;
+    margin-bottom: @gutter-md;
+    padding: @gutter-xs;
+    transition: all 0.4s ease;
+
+    &:hover,
+    &:focus,
+    &:active {
+      background-color: @btn-bg;
+      color: #fff;
+    }
+
+    &:disabled {
+      cursor: auto;
+
+      &:hover,
+      &:focus,
+      &:active {
+        background-color: #fff;
+        color: @btn-bg;
+      }
+    }
   }
 
   &-cancel {
@@ -184,12 +221,21 @@ a {
 }
 
 /* Home page */
-.home {
+.speech-home {
   padding: @gutter-sm;
+  width: 100%;
 
   @media only screen and (min-width: @tablet) {
     margin: auto;
     max-width: 60%;
+  }
+
+  &-wrapper {
+    width: 100%;
+  }
+
+  &-icon {
+    color: @btn-color;
   }
 
   &-button {
@@ -212,6 +258,7 @@ a {
     bottom: 0;
     font-size: @font-xxs;
     left: 0;
+    margin-top: auto;
     padding: @gutter-sm @gutter-sm;
     position: relative;
     right: 0;
@@ -224,8 +271,9 @@ h1, h2, h3 {
 }
 
 h1 {
-  font-size: @font-lg;
+  font-size: 2.5rem;
   line-height: @font-lg;
+  margin-top: 1rem;
 
   @media only screen and (min-width: @tablet) {
     font-size: @font-xl;
@@ -239,11 +287,12 @@ h1 {
 }
 
 .ingress {
+  color: @btn-bg;
   font-family: @font-decorative;
-  font-size: @font-sm;
+  font-size: 1.3rem;
 
   @media only screen and (min-width: @tablet) {
-    font-size: @font-md;
+    font-size: 1.5rem;
     line-height: @font-md;
   }
 }
@@ -268,8 +317,10 @@ h1 {
 }
 
 .bird-image {
-  height: 600px;
-  max-width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  width: 100%;
 }
 
 .bird-image-author {
@@ -278,15 +329,16 @@ h1 {
 
 .bird-image-container {
   height: 0;
+  margin-top: 1rem;
   transition: height 1.2s ease-in-out;
 }
 
 .birdSearchSpeech {
-  padding-top: @gutter-md;
   transition: @transition-normal;
 }
 
 .bird-description {
+  background-color: #232428;
   opacity: 0;
   transition: opacity 1s linear 1.2s;
 }
@@ -314,12 +366,8 @@ h1 {
 }
 
 .bird-image-container {
-  height: 400px;
+  height: auto;
   overflow: hidden;
-
-  @media only screen and (min-width: @tablet) {
-    height: 500px;
-  }
 }
 
 .name-and-sound {
@@ -332,7 +380,7 @@ h1 {
 
 .bird-name {
   @media only screen and (min-width: @tablet) {
-    max-width: 50%;
+    max-width: 70%;
   }
 
   &-title,
@@ -347,12 +395,18 @@ h1 {
   }
 }
 
-.bird-sound {
+.bird-listen-desc {
   margin-right: 0;
 
   @media only screen and (min-width: @tablet) {
     max-width: 50%;
   }
+}
+
+.bird-audio {
+  background-color: #dddcd4;
+  padding-top: @gutter-sm;
+  width: 100%;
 }
 
 .btn-play,
@@ -367,4 +421,27 @@ h1 {
 .speech-synthesis {
   display: block;
   margin-top: 2.5rem;
+}
+
+.best-matches {
+  display: flex;
+  flex-flow: row wrap;
+  list-style: none;
+
+  &-li {
+    &:after {
+      content: ',';
+      display: inline-block;
+    }
+
+    &:last-child {
+      &:after {
+        content: '';
+      }
+    }
+  }
+
+  li {
+    margin-right: 1rem;
+  }
 }
